--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
       commands: []
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: /home
+    baseDirectory: /src
     files:
       - 'index.html'
       - '/img/*'
